--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "clear": "react-native start --reset-cache"
     },
     "dependencies": {
+        "@backpackapp-io/react-native-toast": "^0.11.0",
         "@hookform/resolvers": "^3.9.0",
         "@react-navigation/elements": "^1.3.30",
         "@react-navigation/native": "^6.1.17",
@@ -23,16 +24,23 @@
         "@tanstack/react-query": "^5.50.1",
         "axios": "^1.7.2",
         "dayjs": "^1.11.11",
+        "events": "3.3.0",
         "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
+        "lucide-react-native": "^0.408.0",
         "match-sorter": "1.8.1",
         "react": "18.2.0",
         "react-hook-form": "^7.52.1",
         "react-native": "0.74.3",
         "react-native-gesture-handler": "^2.17.1",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-modal": "^13.0.1",
+        "react-native-pager-view": "^6.3.3",
         "react-native-reanimated": "^3.13.0",
         "react-native-safe-area-context": "^4.10.8",
         "react-native-screens": "^3.32.0",
+        "react-native-svg": "^15.4.0",
+        "react-native-tab-view": "^3.5.2",
         "react-native-vision-camera": "^4.4.1",
         "react-use": "^17.5.0",
         "yup": "^1.4.0"
@@ -41,6 +49,7 @@
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@faker-js/faker": "^8.4.1",
         "@react-native/babel-preset": "0.74.85",
         "@react-native/eslint-config": "0.74.85",
         "@react-native/metro-config": "0.74.85",
