--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@backpackapp-io/react-native-toast": "^0.11.0",
+        "@gorhom/bottom-sheet": "^4",
         "@hookform/resolvers": "^3.9.0",
         "@react-navigation/elements": "^1.3.30",
         "@react-navigation/native": "^6.1.17",
