--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     },
     "dependencies": {
         "@backpackapp-io/react-native-toast": "^0.11.0",
-        "@gorhom/bottom-sheet": "^4",
+        "@gorhom/bottom-sheet": "^4.6.3",
         "@hookform/resolvers": "^3.9.0",
         "@react-navigation/elements": "^1.3.30",
         "@react-navigation/native": "^6.1.17",
         "@react-navigation/native-stack": "^6.10.0",
+        "@rnmapbox/maps": "^10.1.28",
         "@shopify/flash-list": "^1.7.0",
         "@shopify/polaris-tokens": "9.2.0",
         "@shopify/restyle": "^2.4.4",
